--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
-    "axios": "^1.7.9",
+    "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -55,6 +56,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
