--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -69,7 +69,9 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "resend": "^4.3.0",
-    "rsms-expo-new": "file:"
+    "rsms-expo-new": "file:",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
